--- a/uzukler.html
+++ b/uzukler.html
@@ -16,20 +16,17 @@
       font-family: 'Segoe UI', sans-serif;
       background-color: var(--bg);
       color: var(--text-color);
-      padding-top: 80px; /* чтобы контент не перекрывался фикс-меню */
+      padding-top: 60px; /* для места под фикс меню на мобилах */
     }
-
     header, footer {
       text-align: center;
       padding: 20px;
     }
-
     .logo {
       max-width: 300px;
       width: 70%;
       margin-bottom: 10px;
     }
-
     .info-glass {
       margin-top: 10px;
       padding: 10px;
@@ -43,21 +40,37 @@
       margin-right: auto;
     }
 
+    /* Меню */
     .nav {
       background: white;
-      padding: 16px 30px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+      border-radius: 8px;
+      margin: 0 auto 30px;
       font-weight: 600;
       font-size: 17px;
+      user-select: none;
+
       display: flex;
       justify-content: center;
       gap: 30px;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-      border-radius: 0;
-      position: fixed;
+
+      position: static;
       top: 0;
       left: 0;
       right: 0;
       z-index: 999;
+      transition: box-shadow 0.3s ease;
+    }
+
+    /* Фикс меню при скролле на мобилах */
+    .nav.fixed {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      margin: 0;
+      border-radius: 0;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
 
     .nav a {
@@ -66,6 +79,9 @@
       padding: 8px 16px;
       border-radius: 6px;
       transition: background-color 0.3s ease, color 0.3s ease;
+      white-space: nowrap;
+      text-align: center;
+      flex-shrink: 0;
     }
     .nav a:hover {
       color: var(--accent);
@@ -77,19 +93,59 @@
       box-shadow: 0 0 10px var(--accent);
     }
 
+    /* Мобильный гамбургер */
     @media (max-width: 600px) {
-      .nav {
-        flex-wrap: nowrap;
-        overflow-x: auto;
-        justify-content: flex-start;
-        padding: 14px 10px;
-        gap: 16px;
-      }
-      .nav::-webkit-scrollbar {
-        display: none;
-      }
       body {
-        padding-top: 80px;
+        padding-top: 100px; /* больше места под меню */
+      }
+      .nav {
+        position: fixed;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        gap: 0;
+        padding: 0 10px;
+        height: 60px;
+        overflow: hidden;
+      }
+      .nav.fixed {
+        box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      }
+      .nav .menu-links {
+        display: none;
+        flex-direction: column;
+        background: white;
+        position: fixed;
+        top: 60px;
+        left: 0;
+        right: 0;
+        padding: 10px 20px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        border-bottom-left-radius: 8px;
+        border-bottom-right-radius: 8px;
+      }
+      .nav.open .menu-links {
+        display: flex;
+      }
+      .nav a {
+        padding: 12px 20px;
+        font-size: 18px;
+        border-radius: 0;
+        border-bottom: 1px solid #eee;
+        white-space: normal;
+      }
+      .burger {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        padding: 0 16px;
+        font-size: 20px;
+        user-select: none;
+      }
+      .burger svg {
+        width: 28px;
+        height: 28px;
+        fill: var(--text-color);
       }
     }
 
@@ -106,7 +162,6 @@
         grid-template-columns: 1fr;
       }
     }
-
     .item {
       background: var(--card-bg);
       border-radius: 16px;
@@ -116,38 +171,31 @@
       text-align: center;
       position: relative;
     }
-
     video {
       width: 100%;
       border-radius: 12px;
       cursor: pointer;
     }
-
     .code-row {
       margin-top: 12px;
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
-
     .code-text {
       font-size: 17px;
       font-weight: 500;
       color: var(--accent);
     }
-
     .wa-link img {
-      width: 24px;
-      height: 24px;
+      width: 22px;
     }
-
     .category {
       font-size: 14px;
       margin-top: 6px;
       color: #888;
       font-style: italic;
     }
-
     .badge-new {
       position: absolute;
       top: 12px;
@@ -159,32 +207,72 @@
       padding: 4px 10px;
       border-radius: 12px;
     }
-
-    .whatsapp-button {
-      position: fixed;
-      bottom: 90px;
-      right: 20px;
-      width: 56px;
-      height: 56px;
-      background-color: #25D366;
-      border-radius: 50%;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 4px;
-      z-index: 1001;
-    }
-    .whatsapp-button svg {
-      width: 28px;
-      height: 28px;
-    }
-
     footer {
       font-size: 14px;
       color: #666;
       margin-top: 40px;
       margin-bottom: 30px;
+    }
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+    .modal video {
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 8px;
+    }
+    .modal.active {
+      display: flex;
+    }
+
+    /* Плавающая кнопка WhatsApp */
+    #btnWhatsApp {
+      position: fixed;
+      bottom: 90px;
+      right: 20px;
+      background-color: #25D366;
+      border-radius: 50%;
+      width: 56px;
+      height: 56px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      cursor: pointer;
+      z-index: 10000;
+      text-decoration: none;
+    }
+    #btnWhatsApp svg {
+      width: 28px;
+      height: 28px;
+      fill: white;
+    }
+
+    /* Кнопка Наверх */
+    #btnTop {
+      position: fixed;
+      bottom: 160px;
+      right: 20px;
+      background-color: var(--accent);
+      border-radius: 50%;
+      width: 48px;
+      height: 48px;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      cursor: pointer;
+      z-index: 10000;
+      color: white;
+      font-size: 28px;
+      user-select: none;
     }
   </style>
 </head>
@@ -198,10 +286,19 @@
   </header>
 
   <nav class="nav" id="navMenu">
-    <a href="index.html">Ana səhifə</a>
-    <a href="uzukler.html">Üzüklər</a>
-    <a href="qolbaq.html">Qolbaqlar</a>
-    <a href="boyunbag.html">Boyunbağlar</a>
+    <div class="burger" id="burger" aria-label="Toggle menu" role="button" tabindex="0" aria-expanded="false">
+      <!-- Иконка бургера -->
+      <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M3 6h18M3 12h18M3 18h18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+      </svg>
+      <span id="burgerText" style="margin-left:8px; font-weight:600; font-size:16px; display:none;">Kateqoriyalar</span>
+    </div>
+    <div class="menu-links" id="menuLinks">
+      <a href="index.html">Ana səhifə</a>
+      <a href="uzukler.html">Üzüklər</a>
+      <a href="qolbaq.html">Qolbaqlar</a>
+      <a href="boyunbag.html">Boyunbağlar</a>
+    </div>
   </nav>
 
   <main>
@@ -212,29 +309,103 @@
     © 2025 Islimi Jewelry | Bütün huquqlar qorunur
   </footer>
 
-  <!-- WhatsApp Button -->
-  <a href="https://wa.me/994702920323" target="_blank" class="whatsapp-button" aria-label="WhatsApp">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="white">
-      <path d="M16 .1C7.2.1.1 7.2.1 16c0 2.8.8 5.4 2.2 7.6L.1 32l8.6-2.3c2.1 1.1 4.5 1.7 7.1 1.7 8.8 0 15.9-7.1 15.9-15.9C31.9 7.2 24.8.1 16 .1zm0 29c-2.3 0-4.4-.6-6.3-1.7l-.5-.3-5.1 1.4 1.4-5-.3-.5c-1.3-1.8-2-4-2-6.3C3.2 8.7 8.7 3.2 16 3.2c7.3 0 12.8 5.5 12.8 12.8 0 7.3-5.5 13-12.8 13zm7.1-9.5c-.4-.2-2.3-1.1-2.7-1.3s-.6-.2-.8.2-1 1.3-1.2 1.5c-.2.2-.4.3-.8.1s-1.6-.6-3.1-2c-1.1-1-1.9-2.2-2.1-2.6-.2-.4 0-.6.1-.8s.2-.4.4-.6c.1-.2.2-.4.3-.6s0-.4 0-.6c0-.2-.8-2-1.1-2.7-.3-.7-.5-.6-.8-.6h-.7c-.2 0-.6.1-.8.4-.3.3-1 1-1 2.5s1 2.9 1.2 3.1c.2.2 2 3.1 4.8 4.3.7.3 1.2.5 1.6.6.7.2 1.3.2 1.8.1.6-.1 1.8-.8 2-1.5.2-.6.2-1.2.2-1.3.1-.1-.1-.2-.5-.4z"/>
+  <div class="modal" id="videoModal" onclick="this.classList.remove('active')">
+    <video id="modalVideo" controls autoplay></video>
+  </div>
+
+  <!-- Плавающие кнопки -->
+  <a href="https://wa.me/994702920323" target="_blank" id="btnWhatsApp" title="WhatsApp">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" aria-hidden="true" focusable="false">
+      <path d="M20.52 3.48a11.86 11.86 0 00-16.79 0 11.92 11.92 0 00-3.49 8.44 12.13 12.13 0 001.9 5.82L.11 24l6.3-2.08a11.95 11.95 0 005.84 1.9c3.17 0 6.16-1.24 8.44-3.5a11.86 11.86 0 000-16.79zm-1.6 14.53c-1.54 1.54-3.58 2.38-5.72 2.38a8.01 8.01 0 01-4.39-1.31l-.31-.18-3.74 1.25 1.25-3.73-.18-.31A8.02 8.02 0 017.6 10a8.01 8.01 0 015.7 13.02zm-1.86-3.72c-.13-.2-.45-.32-.9-.56-.44-.25-2.58-1.27-2.98-1.42-.4-.15-.68-.21-.97.2-.3.41-1.14 1.4-1.4 1.69-.25.3-.5.34-.94.12-.44-.22-1.86-.69-3.54-2.19-1.31-1.17-2.19-2.61-2.44-3.05-.25-.44-.03-.68.21-.9.21-.2.45-.5.68-.75.23-.25.3-.41.45-.68.15-.25.07-.47-.03-.69-.1-.22-.9-2.15-1.23-2.93-.32-.77-.65-.67-.9-.68-.23 0-.5-.03-.76-.03s-.68.1-1.04.47c-.36.36-1.38 1.34-1.38 3.26s1.41 3.8 1.61 4.07c.2.25 2.78 4.25 6.74 5.96 4 .18 5.7-2.52 6.33-3.1.62-.57.98-1.16 1.11-1.28z"/>
     </svg>
   </a>
 
-  <script>
-    // Дата обновления
-    document.getElementById("lastUpdated").textContent = new Date().toLocaleDateString('az-AZ');
+  <button id="btnTop" title="Yuxarıya" aria-label="Scroll to top">&#8679;</button>
 
-    // Подсветка активной ссылки
-    const currentPath = window.location.pathname;
-    document.querySelectorAll('.nav a').forEach(link => {
-      if (currentPath.includes(link.getAttribute('href'))) {
+  <script>
+    // Меню бургер
+    const burger = document.getElementById('burger');
+    const nav = document.getElementById('navMenu');
+    const menuLinks = document.getElementById('menuLinks');
+    const burgerText = document.getElementById('burgerText');
+
+    burger.addEventListener('click', () => {
+      nav.classList.toggle('open');
+      menuLinks.classList.toggle('open');
+
+      const expanded = burger.getAttribute('aria-expanded') === 'true' || false;
+      burger.setAttribute('aria-expanded', !expanded);
+    });
+
+    // Показ/скрытие текста рядом с бургером по ширине экрана
+    function checkBurgerTextVisibility() {
+      if (window.innerWidth <= 600) {
+        burgerText.style.display = 'inline-block';
+      } else {
+        burgerText.style.display = 'none';
+        // При расширении экрана закрываем меню
+        nav.classList.remove('open');
+        menuLinks.classList.remove('open');
+        burger.setAttribute('aria-expanded', false);
+      }
+    }
+    checkBurgerTextVisibility();
+    window.addEventListener('resize', checkBurgerTextVisibility);
+
+    // Подсветка активного пункта меню
+    const navLinks = document.querySelectorAll('.nav a');
+    const currentPath = window.location.pathname.toLowerCase();
+
+    navLinks.forEach(link => {
+      if (currentPath.includes(link.getAttribute('href').toLowerCase())) {
         link.classList.add('active');
       }
     });
 
-    // Загрузка каталога
+    // Кнопка Наверх
+    const btnTop = document.getElementById('btnTop');
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > 300) {
+        btnTop.style.display = 'flex';
+      } else {
+        btnTop.style.display = 'none';
+      }
+    });
+    btnTop.addEventListener('click', () => {
+      window.scrollTo({top: 0, behavior: 'smooth'});
+    });
+
+    // Видео lazy loading и автоплей
+    function setupVideoObserver() {
+      const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+          const video = entry.target;
+          if (entry.isIntersecting) {
+            if (!video.src) {
+              video.src = video.dataset.src;
+              video.load();
+            }
+            video.play().catch(() => {});
+          } else {
+            video.pause();
+          }
+        });
+      }, { threshold: 0.5 });
+      document.querySelectorAll('video').forEach(video => observer.observe(video));
+      document.addEventListener('touchstart', () => {
+        document.querySelectorAll('video').forEach(v => {
+          if (!v.paused && v.src) return;
+          v.play().catch(() => {});
+        });
+      }, { once: true });
+    }
+
+    // Загрузка товаров и рендер
+    const CATEGORY = "Üzüklər";  // Текущая категория
     const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTV7eBZzgIgpUsrTExL5QYK2Z9Vr5JmWfdG43bMBl74RkB5wK1m2l_I-r8lVYLTE56PDLOOL9tMSzOf/pub?gid=0&single=true&output=tsv";
-    const CATEGORY = "Üzüklər";
     const whatsappNumber = "994702920323";
+
+    document.getElementById("lastUpdated").textContent = new Date().toLocaleDateString('az-AZ');
 
     fetch(SHEET_URL)
       .then(res => res.text())
@@ -242,10 +413,15 @@
         const rows = tsv.trim().split("\n").slice(1);
         const items = rows.map(row => {
           const [code, videoUrl, category] = row.split("\t");
-          return { productCode: code?.trim(), videoUrl: videoUrl?.trim(), category: category?.trim() };
-        }).filter(i => i.category === CATEGORY);
-
-        renderItems(items);
+          return {
+            productCode: code?.trim(),
+            videoUrl: videoUrl?.trim(),
+            category: category?.trim()
+          };
+        });
+        const filtered = items.filter(i => i.category === CATEGORY);
+        renderItems(filtered);
+        setupVideoObserver();
       });
 
     function renderItems(items) {
@@ -262,7 +438,13 @@
         video.setAttribute('loop', '');
         video.setAttribute('autoplay', '');
         video.setAttribute('preload', 'none');
-        video.src = item.videoUrl;
+        video.dataset.src = item.videoUrl;
+        video.muted = true;
+
+        video.addEventListener('click', () => {
+          document.getElementById('modalVideo').src = item.videoUrl;
+          document.getElementById('videoModal').classList.add('active');
+        });
 
         const codeRow = document.createElement('div');
         codeRow.className = 'code-row';
@@ -279,8 +461,8 @@
         const waIcon = document.createElement('img');
         waIcon.src = 'https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg';
         waIcon.alt = 'WhatsApp';
-
         waLink.appendChild(waIcon);
+
         codeRow.appendChild(codeText);
         codeRow.appendChild(waLink);
 
@@ -291,6 +473,7 @@
         wrapper.appendChild(video);
         wrapper.appendChild(codeRow);
         wrapper.appendChild(category);
+
         catalog.appendChild(wrapper);
       });
     }
